# azoth

./: README.md  commitlint.config.js  lefthook.yml  mise.toml  package-lock.json  package.json
.github/workflow/: athanor.yaml
.github/workflows/: athanor.yaml
athanor/: .gitignore  README.md  mix.exs
athanor/lib/: athanor.ex
athanor/lib/athanor/: append_indexed_list.ex  application.ex  artifact_ref.ex  channel.ex  domain.ex  indexed_buffer.ex  indexed_list.ex  process.ex  workflow.ex
athanor/lib/athanor/domain/: artifact_ref.ex  channel.ex  process.ex  subscription.ex  task_run.ex  workflow.ex
athanor/lib/athanor/dsl/: parser.ex
athanor/lib/athanor/storage/: glob_resolver.ex  local_glob_resolver.ex  resolver.ex
athanor/lib/athanor/workflow/: dispatcher.ex  (+4 more)
athanor/native/athanor_parser/: Cargo.toml  test_kdl.rs
athanor/native/athanor_parser/src/: channel_ref.rs  error.rs  ir.rs  lib.rs  parser.rs  serializer.rs  validator.rs
athanor/native/athanor_parser/src/tests/: mod.rs  parser_tests.rs  validator_tests.rs
athanor/test/: athanor_append_indexed_list_test.exs  athanor_test.exs  test_helper.exs
athanor/test/athanor/: indexed_buffer_test.exs
docs/: architecture.md  dsl.md  implementation-plan.md  index.md
docs/.vitepress/: config.js  theme.css
docs/.vitepress/theme/: index.js  theme.css
docs/architecture/: decisions.md  index.md
docs/dsl/: concepts.md  reference.md
docs/guide/: _implementation-plan.md  architecture.md  color-scheme.md  index.md  internals.md  workflow-internals.md
docs/guide/dsl/: concepts.md  reference.md
(+32 files in other folders)
