[package]
name = "athanor_parser"
version = "0.1.0"
edition = "2021"

[lib]
name = "athanor_parser"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.37"
starlark = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
anyhow = "1"
thiserror = "1"
regex = "1"
allocative = "0.3.4"

[profile.release]
lto = true
opt-level = 3
